[B]Version 1.1.12[/B]
Added Stripchat webcams