@@ -1,2 +1,3 @@
 [B]Version 1.1.12[/B]
 Added Stripchat webcams
+Chaturbate Added Online Favorites
